fix z-index of layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,14 @@ body {
   }
 }
 
+.leaflet-top {
+  z-index: 999 !important;
+}
+
+.leaflet-control-attribution {
+  display: none !important;
+}
+
 /* /////////////////////icon//////////////////// */
 
 @font-face {
